encapsulate @filoz/synapse-sdk with config, singleton client, and Fastify plugin
Introduce a project-aligned encapsulation of @filoz/synapse-sdk for Filecoin
Onchain Cloud (storage and payments). Synapse is optional: when
SYNAPSE_PRIVATE_KEY is not set, the client is not created and callers
receive null.

Configuration (src/core/config.ts):
- SYNAPSE_RPC_URL: optional; if unset, SDK defaults are used per network
- SYNAPSE_NETWORK: mainnet | calibration (default: calibration)
- SYNAPSE_WITH_CDN, SYNAPSE_DEV: boolean options
- Private key only from process.env.SYNAPSE_PRIVATE_KEY (never in config)

Singleton client (src/synapse/client.ts):
- getSynapse(): lazy-init singleton, returns Promise<Synapse | null>
- disconnectSynapse(): clears singleton on app shutdown
- Concurrency-safe init; errors logged and return null

Fastify integration (src/synapse/plugin.ts):
- synapsePlugin decorates fastify.synapse (Synapse | null)
- onClose calls disconnectSynapse()

API surface: getSynapseClient() in deps.ts; .env.example updated.

--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ API_DOCS_URL=/docs
 API_REDOC_URL=/redoc
 
 # 服务器配置
-HOST=0.0.0.0
+HOST=127.0.0.1
 PORT=8000
 RELOAD=false
 
@@ -32,12 +32,27 @@ SECRET_KEY=your-secret-key-change-in-production-please-use-a-strong-random-key
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# CORS配置
-CORS_ORIGINS=["http://localhost:3000","http://localhost:8080"]
+# CORS配置（允许跨域）
+# 白名单：逗号分隔或 JSON 数组，如 http://localhost:9000,http://127.0.0.1:9000
+CORS_ORIGINS=http://localhost:3000,http://localhost:8080,http://localhost:9000,http://127.0.0.1:9000
+# 开发时可设为 true 允许任意 origin，生产环境勿用
+CORS_ORIGIN_ALLOW_ALL=false
 CORS_CREDENTIALS=true
-CORS_METHODS=["*"]
-CORS_HEADERS=["*"]
+CORS_METHODS=*
+CORS_HEADERS=*
 
 # 日志配置
 LOG_LEVEL=INFO
 LOG_FORMAT=json
+
+# Synapse (Filecoin Onchain Cloud)，不配置则 fastify.synapse / getSynapseClient() 为 null
+# SYNAPSE_PRIVATE_KEY 仅在此示例中占位，实际从环境变量读取，不入配置、不落日志
+# SYNAPSE_PRIVATE_KEY=0x...
+# 可选：RPC URL，不设则按 SYNAPSE_NETWORK 使用默认端点
+# SYNAPSE_RPC_URL=
+# mainnet | calibration
+SYNAPSE_NETWORK=calibration
+# 是否使用 CDN 检索
+# SYNAPSE_WITH_CDN=false
+# 是否包含 dev 状态 SP（开发用）
+# SYNAPSE_DEV=false
