--- a/package.json
+++ b/package.json
@@ -33,9 +33,11 @@
   "dependencies": {
     "@fastify/compress": "^8.0.0",
     "@fastify/cors": "^10.0.1",
+    "@filoz/synapse-sdk": "0.36.1",
     "@prisma/client": "^5.20.0",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
+    "ethers": "6.16.0",
     "fastify": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "pino": "^9.4.0",
