feat: media upload, file list API, config, synapse, i18n and related changes
- Add media router: GET /media/list (no auth, paginated), POST /media/upload (admin only).
- Add media schemas, multipart utils, i18n (media.listFailed, etc.).
- Config, auth, health, users, router, exception middleware updates.
- Synapse client and scripts/synapse-approve. .env.example, package.json.

Co-Authored-By: EverMedia Vault <243287224+Evermediavault@users.noreply.github.com>

--- a/.env.example
+++ b/.env.example
@@ -56,3 +56,12 @@ SYNAPSE_NETWORK=calibration
 # SYNAPSE_WITH_CDN=false
 # 是否包含 dev 状态 SP（开发用）
 # SYNAPSE_DEV=false
+# 上传时强制创建新 dataset，避免「Data set not found」（默认 true；设为 false 可复用已有 dataset）
+# SYNAPSE_FORCE_CREATE_DATA_SET=true
+
+# 上传配置（逗号分隔 MIME 类型）
+# UPLOAD_ALLOWED_FILE_TYPES=image/jpeg,image/png,application/pdf,...
+# 批量上传数量（单次最多文件数）
+# UPLOAD_MAX_FILES=4
+# 单文件最大尺寸（KB），如 10240 即 10MB
+# UPLOAD_MAX_FILE_SIZE_KB=10240
