feat: add Synapse wallet API endpoints and remove standalone approve script
- Add synapse.ts endpoint and schema for wallet operations
- Register synapse routes in router and endpoints index
- Update i18n locales (en-US, zh-CN) for Synapse messages
- Remove scripts/synapse-approve.ts in favor of API integration

Co-Authored-By: EverMedia Vault <243287224+Evermediavault@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
     "prisma:studio": "prisma studio",
     "prisma:push": "prisma db push",
     "prisma:reset": "prisma migrate reset",
-    "type-check": "tsc --noEmit",
-    "synapse:approve": "tsx scripts/synapse-approve.ts"
+    "type-check": "tsc --noEmit"
   },
   "keywords": [
     "api",
